# team_WriteRightCode

./: .gitignore  CMakeLists.txt  bug记录.md  readme.md
inc/: cfg.h  filter.h  io.h  myFilter.h  robot.h  strategy.h  workbench.h
src/: filter.c  input.c  input_and_output.c  io.c  main.c  myFilter.c  robot.c  strategy.c  workbench.c
test/: input.txt  run  test_01_symbol.c
